Show notification on liked tweet

--- a/client/src/main/client/src/assets/i18n/en.json
+++ b/client/src/main/client/src/assets/i18n/en.json
@@ -31,5 +31,8 @@
   "LOCATION_HELP": "Your current location.",
   "WEBSITE": "Website",
   "WEBSITE_HELP": "Your website.",
-  "SUBMIT": "Submit"
+  "SUBMIT": "Submit",
+  "TOAST": {
+    "LIKE": "Someone likes your tweet '{{tweet}}'!"
+  }
 }
