--- a/client/src/main/client/src/assets/i18n/nl.json
+++ b/client/src/main/client/src/assets/i18n/nl.json
@@ -31,5 +31,8 @@
   "LOCATION_HELP": "Je huidige locatie.",
   "WEBSITE": "Website",
   "WEBSITE_HELP": "Je website.",
-  "SUBMIT": "Bevestigen"
+  "SUBMIT": "Bevestigen",
+  "TOAST": {
+    "LIKE": "Iemand vindt je tweet '{{tweet}}' leuk!"
+  }
 }
